--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -41,6 +41,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   width: calc(100vw - (100vw - 100%));
+  overflow: hidden;
 }
 
 a {
